upgrated lab 5-6